[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Gameplay/CameraFollow.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Instances/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Map/MapMaker.gd" type="Script" id=3]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/AirBrick.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Scripts/Map/MakerScript.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Map/MapSettings.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Map/MapMakerLoader.gd" type="Script" id=7]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/Coin.tres" type="SpriteFrames" id=8]
[ext_resource path="res://Font/DownHillFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scenes/Instances/Map.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/Brick.tres" type="SpriteFrames" id=11]
[ext_resource path="res://Scripts/GUI/setSprites.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Map/MapMakerPlayer.gd" type="Script" id=13]
[ext_resource path="res://Font/GUIFont.tres" type="DynamicFont" id=14]
[ext_resource path="res://Font/DownHill64.tres" type="DynamicFont" id=15]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/Block.tres" type="SpriteFrames" id=16]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/OffBlock.tres" type="SpriteFrames" id=17]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/OnBlock.tres" type="SpriteFrames" id=18]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/OnOffSwitch.tres" type="SpriteFrames" id=19]
[ext_resource path="res://Sprites/SMB1/SpriteFrames/Tiles/QuestionBlock.tres" type="SpriteFrames" id=20]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 15 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 15 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 14 )

[node name="MapMaker" type="Node2D"]
script = ExtResource( 6 )

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Map"]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -1000
limit_top = 312
limit_bottom = 0
script = ExtResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="Map/Camera2D"]
pause_mode = 1
position = Vector2( 0, 592 )
scale = Vector2( 48, 28 )

[node name="GUI" type="Control" parent="Map/Camera2D"]
margin_left = -880.0
margin_top = 304.0
margin_right = 1040.0
margin_bottom = 1376.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Map/Camera2D/GUI"]
margin_left = 48.0
margin_top = -384.0
margin_right = 2192.0
margin_bottom = 830.0
color = Color( 0.662745, 0.72549, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGame" type="Control" parent="Map/Camera2D/GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="COIN" type="Control" parent="Map/Camera2D/GUI/InGame"]
margin_left = 848.0
margin_top = 16.0
margin_right = 888.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="Map/Camera2D/GUI/InGame/COIN"]
position = Vector2( 16, 16 )
scale = Vector2( 2, 2 )
frames = ExtResource( 8 )
animation = "Overworld"

[node name="X" type="Label" parent="Map/Camera2D/GUI/InGame/COIN"]
margin_left = 32.0
margin_top = 6.30673
margin_right = 152.0
margin_bottom = 106.307
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 9 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinNum" type="Label" parent="Map/Camera2D/GUI/InGame/COIN"]
margin_left = 51.761
margin_top = 9.24987
margin_right = 185.761
margin_bottom = 109.25
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 9 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" parent="Map" instance=ExtResource( 10 )]

[node name="Loader" type="Node2D" parent="Map"]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 720 )
script = ExtResource( 13 )

[node name="Maker" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Tiles" type="Panel" parent="Maker"]
modulate = Color( 1, 1, 1, 0.443137 )
margin_left = -496.0
margin_top = 304.0
margin_right = 480.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brick_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -464.0
margin_top = 320.0
margin_right = -416.0
margin_bottom = 368.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/Brick_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 11 )
animation = "Overworld"

[node name="AirBrick_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -400.0
margin_top = 320.0
margin_right = -352.0
margin_bottom = 368.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/AirBrick_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 4 )
animation = "Overworld"

[node name="Block_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -336.0
margin_top = 320.0
margin_right = -288.0
margin_bottom = 368.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/Block_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 16 )
animation = "Overworld"

[node name="QuestionBlock_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -272.0
margin_top = 320.0
margin_right = -224.0
margin_bottom = 368.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/QuestionBlock_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 20 )
animation = "Overworld"

[node name="OnBlock_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -144.0
margin_top = 320.0
margin_right = -96.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/OnBlock_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 18 )
animation = "On"

[node name="OffBlock_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -80.0
margin_top = 320.0
margin_right = -32.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/OffBlock_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 17 )
animation = "Off"

[node name="SwitchBlock_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -16.0
margin_top = 320.0
margin_right = 32.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/SwitchBlock_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 19 )
animation = "On"

[node name="Coin_btn" type="Button" parent="Maker"]
self_modulate = Color( 0, 0, 0, 0.294118 )
margin_left = -208.0
margin_top = 320.0
margin_right = -160.0
margin_bottom = 368.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Maker/Coin_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.95433, 2 )
frames = ExtResource( 8 )
animation = "Overworld"

[node name="Load_btn" type="Button" parent="Maker"]
margin_left = 416.0
margin_top = 320.0
margin_right = 608.0
margin_bottom = 512.0
rect_scale = Vector2( 0.25, 0.25 )
theme = SubResource( 1 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save_btn" type="Button" parent="Maker"]
margin_left = 352.0
margin_top = 320.0
margin_right = 544.0
margin_bottom = 512.0
rect_scale = Vector2( 0.25, 0.25 )
theme = SubResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Maker"]
margin_left = -144.0
margin_top = 448.0
margin_right = 320.0
margin_bottom = 752.0
theme = SubResource( 3 )
window_title = "Bir Dosya AÃ§"
mode = 0
access = 2
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Maker/Tiles" to="Map" method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Maker/Tiles" to="Map" method="_on_gui_mouse_exited"]
[connection signal="pressed" from="Maker/Load_btn" to="Maker" method="_on_Load_btn_pressed"]
[connection signal="pressed" from="Maker/Save_btn" to="Maker" method="_on_Save_btn_pressed"]
[connection signal="file_selected" from="Maker/FileDialog" to="Map/Loader" method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="Maker/FileDialog" to="Maker" method="_on_FileDialog_file_selected"]
